fix(icbc,ui): 补齐「点去签署」客户端与告知函独立证据条目
独立评审（.fleet/logs/95.review.log，REVIEW_VERDICT: BLOCK）指出：核心状态机、
门禁、事务边界、迁移都是对的，但两条 AC 只做到后端、没有客户端在交付。这个提交
逐条收口，追加在 c7b04ed4 之上。

做了什么：
- SP-1「点去签署 → 生成链接并跳转」：自然人出售者端首页「待签框架收购协议」条目可点
  ——mintAgreementSignToken（登录态换 ONBOARDING 一次性令牌）→ 公开端点
  /icbc/public/agreement/sign-url 现取第三方链接 → H5 直接跳转 / 小程序用新页
  pages/webview 的 web-view 打开。现场端第 5 步 ELECTRONIC 分支改渲染「协议待签署
  （电子签章）」，不再显示裸枚举，并复用 #91 的 useHandoffLink 把本人引到自然人端。
  新增 POST /app-api/icbc/seller/portal/agreement/sign-token（无待签协议不给令牌），
  SellerPendingItemVO 加 action=SIGN_AGREEMENT，field-shared 的类型注释同步。
- SP-2 告知函独立进链：icbc_framework_agreement 加 notice_file_url；回调把两份文书
  分别落址（fileUrl=框架收购协议，noticeFileUrl=告知函）；InvoiceEvidenceServiceImpl
  按 FRAMEWORK_AGREEMENT 类型各挂一条，同归合同流，不新增证据类型 / 第六流。主文书
  选定口径写进 pickDocumentUrl 的注释。
- SP-4 闸门：saveFrameworkAgreement 不再接受手送 status（新建按签法定状态，只放行显式
  「作废」；修改沿用落库的签署方式与状态），待签署电子协议缺任务号时补发起。
- SP-5：推进生效改用 status=0 条件更新兜并发，旧协议作废只做一次；已生效但 fileUrl
  为空时重放补取（两份都齐不再触网）。
- 其它：S-1 两份逐字相同的 inTenant 收敛为 icbc 内 TenantCalls（不用
  TenantUtils.execute(Callable)：它 catch(Exception) 会把 ServiceException 包成
  RuntimeException、丢错误码，公开端点内部大量抛业务错误，故保留异常原样上抛的收口）；
  S-2 补 listSignedDocuments 负例；S-4 删 initiate 里多余的 signMethod 回写；
  S-5 断言成功 consume / 失败不 consume；S-3 handoff.md 数字改对并补全清单。

口径取舍：签署页由自然人出售者端承接（签署是本人身份的事），现场端只给二维码 / 可复制
链接；告知函与协议各自成条但同归 FRAMEWORK_AGREEMENT 类型，不新增第六流；未改 ADR。
未给框架 TenantUtils 动刀，也没碰 OnboardingWizardSubmitRespVO（与 #94 的冲突 hunk 不在此）。

测试：全量 icbc 804 通过 / 0 失败 / 1 skip（基线 795，本提交 +9：Framework +2、
PublicEsign +2、SellerOnboarding +2、SellerPortal +3）。现场端与自然人端
ts:check / build:h5 均通过。

Refs #95